Variables was distributed to files. Insignificant changes.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <body>
 
         <!--[if lt IE 8]>
-            <div class="c-ancients">
+            <div class="b-ancients">
                 Вы используете устаревший браузер. 
                 Для корректного функционирования этого сайта и большинства других 
                 Вам необходимо <a href="http://abetterbrowser.org/ru">обновить ваш браузер</a>.
@@ -30,23 +30,23 @@
 
 
         <!-- Header -->
-        <div class="l-header">
-            <header class="c-region">
+        <header class="b-header">
+            <div class="b-region">
 
                 <a class="b-logo" href="index.html">
                     Hello, Header!
                 </a>
 
-            </header>
-        </div>
+            </div>
+        </header>
         <!--/Header -->
 
 
 
 
         <!-- Nav -->
-        <div class="l-navigation">
-            <nav class="c-region">
+        <nav class="b-nav">
+            <div class="b-region">
 
                 <ul class="b-nav">
                     <li><a href="#"></a></li>
@@ -56,16 +56,16 @@
                     <li><a href="#"></a></li>
                 </ul>
 
-            </nav>
-        </div>
+            </div>
+        </nav>
         <!--/Nav -->
 
 
 
 
         <!-- Body-->
-        <div class="l-body">
-            <div class="c-region" role="main">
+        <div class="b-body">
+            <div class="b-region" role="main">
 
                 <article> 
 
@@ -131,13 +131,13 @@
 
 
         <!-- Footer -->
-        <div class="l-footer">
-            <footer class="c-region">
+        <footer class="b-footer">
+            <div class="b-region">
 
                 Hello, Footer!
 
-            </footer>
-        </div>
+            </div>
+        </footer>
         <!--/Footer -->
 
 
