Remarked kit page

--- a/kit.html
+++ b/kit.html
@@ -74,7 +74,7 @@
                      --><div class="body__content">
 
                             <div class="content">
-                                <div class="content__title">
+                                <div class="content__header">
                                     <h1 class="title title_large">Page title</h1>
                                 </div>
                                 <div class="content__body">
@@ -209,6 +209,44 @@
                                     <br>
                                     <br>
 
+                                    .button
+                                    <br>
+                                    <br>
+
+
+
+                                    <div class="button">div button</div>
+                                    <span class="button">span button</span>
+                                    <a class="button" href="#">a button</a>
+                                    <input type="submit" class="button" value="input button">
+                                    <button class="button">button button</button>
+
+                                    <br>
+                                    <br>
+                                    <br>
+                                    <br>
+                                    .field
+                                    <br>
+                                    <br>
+
+                                    <div class="field">
+                                        <div class="field__label"><label for="temp-field-id-a">.field__label</label></div>
+                                        <input class="field__input" type="text" placeholder=".field__input" id="temp-field-id-a">
+                                        <div class="field__note">.field__note</div>
+                                    </div>
+
+                                    <br>
+
+                                    <div class="field">
+                                        <div class="field__label"><label for="temp-field-id-a">.field__label</label></div>
+                                        <textarea class="field__input" type="text" placeholder="textarea.field__input" id="temp-field-id-a"></textarea>
+                                        <div class="field__note">.field__note</div>
+                                    </div>
+
+                                    <br>
+                                    <br>
+                                    <br>
+                                    <br>
                                     .title
                                     <br>
                                     <br>
