Updated reset and init, removed row and col etc

--- a/kit.html
+++ b/kit.html
@@ -10,7 +10,7 @@
         -->
         <meta name="SKYPE_TOOLBAR" content="SKYPE_TOOLBAR_PARSER_COMPATIBLE">
 
-        <link rel="stylesheet" href="css/_style.css">
+        <link rel="stylesheet" href="css/__style.css">
         <script src="js/vendor/modernizr-2.7.1.min.js"></script>
 
         <title></title>
@@ -317,229 +317,6 @@
                                     <br>
                                     <br>
                                     <br>
-
-                                    .col
-
-                                    <br>
-                                    <br>
-
-                                    <div class="col">
-                                        <div class="col__item">
-                                            <div style="height: 30px; line-height: 30px; text-align: center; background: purple; color: #fff">.col__item</div>
-                                        </div>
-                                        <div class="col__item">
-                                            <div style="height: 30px; line-height: 30px; text-align: center; background: purple; color: #fff">.col__item (just one more)</div>
-                                        </div>
-                                        <div class="col__item col__item_center">
-                                            <div style="display: inline-block; padding: 0 15px; height: 30px; line-height: 30px; text-align: center; background: purple; color: #fff">.col__item.col__item_center</div>
-                                        </div>
-                                        <div class="col__item col__item_right">
-                                            <div style="display: inline-block; padding: 0 15px; height: 30px; line-height: 30px; text-align: center; background: purple; color: #fff">.col__item.col__item_right</div>
-                                        </div>
-                                    </div>
-
-                                    <br>
-                                    <br>
-                                    <br>
-                                    <br>
-                                    <br>
-
-                                    .row
-
-                                    <br>
-                                    <br>
-
-                                    <ul class="row">
-                                        <li class="row__item row__item_12">
-                                            <div style="height: 30px; line-height: 30px; text-align: center; background: purple; color: #fff">.row__item.row__item_12</div>
-                                        </li>
-                                    </ul>
-
-                                    <br>
-
-                                    <ul class="row">
-                                        <li class="row__item row__item_11">
-                                            <div style="height: 30px; line-height: 30px; text-align: center; background: purple; color: #fff">.row__item.row__item_11</div>
-                                        </li><!--
-                                     --><li class="row__item row__item_1">
-                                            <div style="height: 30px; line-height: 30px; text-align: center; background: purple; color: #fff">_1</div>
-                                        </li>
-                                    </ul>
-
-                                    <br>
-
-                                    <ul class="row">
-                                        <li class="row__item row__item_10">
-                                            <div style="height: 30px; line-height: 30px; text-align: center; background: purple; color: #fff">.row__item.row__item_10</div>
-                                        </li><!--
-                                     --><li class="row__item row__item_2">
-                                            <div style="height: 30px; line-height: 30px; text-align: center; background: purple; color: #fff">...__item_2</div>
-                                        </li>
-                                    </ul>
-
-                                    <br>
-
-                                    <ul class="row">
-                                        <li class="row__item row__item_9">
-                                            <div style="height: 30px; line-height: 30px; text-align: center; background: purple; color: #fff">.row__item.row__item_9</div>
-                                        </li><!--
-                                     --><li class="row__item row__item_3">
-                                            <div style="height: 30px; line-height: 30px; text-align: center; background: purple; color: #fff">.row__item.row__item_3</div>
-                                        </li>
-                                    </ul>
-
-                                    <br>
-
-                                    <ul class="row">
-                                        <li class="row__item row__item_8">
-                                            <div style="height: 30px; line-height: 30px; text-align: center; background: purple; color: #fff">.row__item.row__item_8</div>
-                                        </li><!--
-                                     --><li class="row__item row__item_4">
-                                            <div style="height: 30px; line-height: 30px; text-align: center; background: purple; color: #fff">.row__item.row__item_4</div>
-                                        </li>
-                                    </ul>
-
-                                    <br>
-
-                                    <ul class="row">
-                                        <li class="row__item row__item_7">
-                                            <div style="height: 30px; line-height: 30px; text-align: center; background: purple; color: #fff">.row__item.row__item_7</div>
-                                        </li><!--
-                                     --><li class="row__item row__item_5">
-                                            <div style="height: 30px; line-height: 30px; text-align: center; background: purple; color: #fff">.row__item.row__item_5</div>
-                                        </li>
-                                    </ul>
-
-                                    <br>
-
-                                    <ul class="row">
-                                        <li class="row__item row__item_6">
-                                            <div style="height: 30px; line-height: 30px; text-align: center; background: purple; color: #fff">.row__item.row__item_6</div>
-                                        </li><!--
-                                     --><li class="row__item row__item_6">
-                                            <div style="height: 30px; line-height: 30px; text-align: center; background: purple; color: #fff">.row__item.row__item_6</div>
-                                        </li>
-                                    </ul>
-
-                                    <br>
-
-                                    <ul class="row">
-                                        <li class="row__item row__item_1">
-                                            <div style="height: 30px; line-height: 30px; text-align: center; background: purple; color: #fff">_1</div>
-                                        </li><!--
-                                     --><li class="row__item row__item_2">
-                                            <div style="height: 30px; line-height: 30px; text-align: center; background: purple; color: #fff">...__item_2</div>
-                                        </li><!--
-                                     --><li class="row__item row__item_3">
-                                            <div style="height: 30px; line-height: 30px; text-align: center; background: purple; color: #fff">.row__item.row__item_3</div>
-                                        </li><!--
-                                     --><li class="row__item row__item_6">
-                                            <div style="height: 30px; line-height: 30px; text-align: center; background: purple; color: #fff">.row__item.row__item_6</div>
-                                        </li>
-                                    </ul>
-
-                                    <br>
-
-                                    <ul class="row">
-                                        <li class="row__item row__item_4">
-                                            <div style="height: 30px; line-height: 30px; text-align: center; background: purple; color: #fff">.row__item.row__item_4</div>
-                                        </li><!--
-                                     --><li class="row__item row__item_4">
-                                            <div style="height: 30px; line-height: 30px; text-align: center; background: purple; color: #fff">.row__item.row__item_4</div>
-                                        </li><!--
-                                     --><li class="row__item row__item_4">
-                                            <div style="height: 30px; line-height: 30px; text-align: center; background: purple; color: #fff">.row__item.row__item_4</div>
-                                        </li>
-                                    </ul>
-
-                                    <br>
-
-                                    <ul class="row">
-                                        <li class="row__item row__item_3">
-                                            <div style="height: 30px; line-height: 30px; text-align: center; background: purple; color: #fff">.row__item.row__item_3</div>
-                                        </li><!--
-                                     --><li class="row__item row__item_3">
-                                            <div style="height: 30px; line-height: 30px; text-align: center; background: purple; color: #fff">.row__item.row__item_3</div>
-                                        </li><!--
-                                     --><li class="row__item row__item_3">
-                                            <div style="height: 30px; line-height: 30px; text-align: center; background: purple; color: #fff">.row__item.row__item_3</div>
-                                        </li><!--
-                                     --><li class="row__item row__item_3">
-                                            <div style="height: 30px; line-height: 30px; text-align: center; background: purple; color: #fff">.row__item.row__item_3</div>
-                                        </li>
-                                    </ul>
-
-                                    <br>
-
-                                    <ul class="row">
-                                        <li class="row__item row__item_2">
-                                            <div style="height: 30px; line-height: 30px; text-align: center; background: purple; color: #fff">...__item_2</div>
-                                        </li><!--
-                                     --><li class="row__item row__item_2">
-                                            <div style="height: 30px; line-height: 30px; text-align: center; background: purple; color: #fff">...__item_2</div>
-                                        </li><!--
-                                     --><li class="row__item row__item_2">
-                                            <div style="height: 30px; line-height: 30px; text-align: center; background: purple; color: #fff">...__item_2</div>
-                                        </li><!--
-                                     --><li class="row__item row__item_2">
-                                            <div style="height: 30px; line-height: 30px; text-align: center; background: purple; color: #fff">...__item_2</div>
-                                        </li><!--
-                                     --><li class="row__item row__item_2">
-                                            <div style="height: 30px; line-height: 30px; text-align: center; background: purple; color: #fff">...__item_2</div>
-                                        </li><!--
-                                     --><li class="row__item row__item_2">
-                                            <div style="height: 30px; line-height: 30px; text-align: center; background: purple; color: #fff">...__item_2</div>
-                                        </li>
-                                    </ul>
-
-                                    <br>
-
-                                    <ul class="row">
-                                        <li class="row__item row__item_1">
-                                            <div style="height: 30px; line-height: 30px; text-align: center; background: purple; color: #fff">_1</div>
-                                        </li><!--
-                                     --><li class="row__item row__item_1">
-                                            <div style="height: 30px; line-height: 30px; text-align: center; background: purple; color: #fff">_1</div>
-                                        </li><!--
-                                     --><li class="row__item row__item_1">
-                                            <div style="height: 30px; line-height: 30px; text-align: center; background: purple; color: #fff">_1</div>
-                                        </li><!--
-                                     --><li class="row__item row__item_1">
-                                            <div style="height: 30px; line-height: 30px; text-align: center; background: purple; color: #fff">_1</div>
-                                        </li><!--
-                                     --><li class="row__item row__item_1">
-                                            <div style="height: 30px; line-height: 30px; text-align: center; background: purple; color: #fff">_1</div>
-                                        </li><!--
-                                     --><li class="row__item row__item_1">
-                                            <div style="height: 30px; line-height: 30px; text-align: center; background: purple; color: #fff">_1</div>
-                                        </li><!--
-                                     --><li class="row__item row__item_1">
-                                            <div style="height: 30px; line-height: 30px; text-align: center; background: purple; color: #fff">_1</div>
-                                        </li><!--
-                                     --><li class="row__item row__item_1">
-                                            <div style="height: 30px; line-height: 30px; text-align: center; background: purple; color: #fff">_1</div>
-                                        </li><!--
-                                     --><li class="row__item row__item_1">
-                                            <div style="height: 30px; line-height: 30px; text-align: center; background: purple; color: #fff">_1</div>
-                                        </li><!--
-                                     --><li class="row__item row__item_1">
-                                            <div style="height: 30px; line-height: 30px; text-align: center; background: purple; color: #fff">_1</div>
-                                        </li><!--
-                                     --><li class="row__item row__item_1">
-                                            <div style="height: 30px; line-height: 30px; text-align: center; background: purple; color: #fff">_1</div>
-                                        </li><!--
-                                     --><li class="row__item row__item_1">
-                                            <div style="height: 30px; line-height: 30px; text-align: center; background: purple; color: #fff">_1</div>
-                                        </li>
-                                    </ul>
-
-                                    <br>
-
-                                    <ul class="row">
-                                        <li class="row__item">
-                                            <div style="height: 30px; line-height: 30px; text-align: center; background: purple; color: #fff">.row__item (без модификатора ширина по ширине контента)</div>
-                                        </li>
-                                    </ul>
 
                                     <br>
                                     <br>
