--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
         <link rel="stylesheet" href="css/style.css">
         <title>Index</title>
 
+        <!--[if lt IE 9]>
+        <script src="js/html5shiv.min.js"></script>
+        <![endif]-->
+        
     </head>
 
     <body>
