Reset default HTML values

--- a/index.html
+++ b/index.html
@@ -12,10 +12,6 @@
         <link rel="stylesheet" href="css/style.css">
         <title>Index</title>
 
-        <!--[if lt IE 9]>
-        <script src="js/html5shiv.min.js"></script>
-        <![endif]-->
-        
     </head>
 
     <body>
@@ -43,7 +39,7 @@
                     </header>
 
                 </div>
-            </div><!-- /page__header -->
+            </div>
 
 
 
@@ -53,7 +49,7 @@
                     TODO: .nav
 
                 </div>
-            </nav><!-- page__nav -->
+            </nav>
 
 
 
@@ -352,6 +348,16 @@
                                     </div>
 
 
+                                    <input type="text"/>
+                                    <input type="checkbox"/>
+                                    <input type="radio"/>
+                                    <input type="file"/>
+
+
+                                    <input type="submit" value="123">
+                                    <button class="sda">asdfasdfasdf</button>
+
+
                                 </div>
                             </div>
 
@@ -359,7 +365,7 @@
 
                     </div>
                 </div>
-            </div><!-- /page__body -->
+            </div>
 
 
 
@@ -373,17 +379,16 @@
                         </div>
                     </footer>
                 </div>
-            </div><!-- /page__footer -->
+            </div>
 
 
 
-        </div><!-- /page -->
+        </div>
 
 
 
 
 
-        <!-- Scripts -->
         <script src="js/jquery-2.1.1.min.js"></script>
         <script src="js/jquery.placeholder.js"></script>
         <script>
@@ -391,7 +396,6 @@
                 $('input, textarea').placeholder();
             });
         </script>
-        <!--/Scripts -->
 
 
     </body>
