Refreshed Input field

--- a/index.html
+++ b/index.html
@@ -141,6 +141,8 @@
                                                     </ol>
                                                 </div>
 
+
+
                                                 <table class="table">
                                                     <thead class="table__head">
                                                     <tr class="table__head__row">
@@ -168,6 +170,7 @@
                                                     </tbody>
                                                 </table>
 
+
                                                 <!--<div class="video">-->
                                                     <!--<iframe class="video__iframe" src="//www.youtube.com/embed/P3xKbPooKAo" frameborder="0" allowfullscreen></iframe>-->
                                                 <!--</div>-->
@@ -175,7 +178,7 @@
 
                                             </div>
                                             <div class="article__foot">
-                                                I am share button or maybe my like friend
+                                                We are Share and Like Buttons
                                             </div>
                                         </article>
 
@@ -188,7 +191,27 @@
                                     </div>
 
                                     <div class="content__body__section">
-                                        I am extra gallery
+                                        I am additional content form
+                                        <form class="form">
+                                            <div class="form__row">
+                                                <div class="input">
+                                                    <label class="input__label" for="temp-a">Label</label>
+                                                    <input class="input__area" type="text" placeholder="Input field" id="temp-a">
+                                                </div>
+                                            </div>
+                                            <div class="form__row">
+                                                <div class="input">
+                                                    <label class="input__label" for="temp-b">Label</label>
+                                                    <textarea class="input__area" placeholder="Textarea field" id="temp-b"></textarea>
+                                                </div>
+                                            </div>
+                                            <div class="form__row">
+                                                <input class="button" type="submit" value="Button">
+                                            </div>
+
+                                        </form>
+
+
                                     </div>
 
                                 </div>
