--- a/index.html
+++ b/index.html
@@ -225,6 +225,107 @@
             </div>
 
 
+            <div class="page__extra">
+
+                    <div class="jcarousel jcarousel_skeleton">
+
+                        <div class="jcarousel__viewport">
+                            <ul class="jcarousel__viewport__list">
+                                <li class="jcarousel__viewport__list__item">
+                                    <div style="width: 177px; height: 177px; background: linear-gradient(to right, red, blue);"></div>
+                                </li>
+                                <li class="jcarousel__viewport__list__item">
+                                    <div style="width: 177px; height: 177px; background: linear-gradient(to right, red, blue);"></div>
+                                </li>
+                                <li class="jcarousel__viewport__list__item">
+                                    <div style="width: 177px; height: 177px; background: linear-gradient(to right, red, blue);"></div>
+                                </li>
+                                <li class="jcarousel__viewport__list__item">
+                                    <div style="width: 177px; height: 177px; background: linear-gradient(to right, red, blue);"></div>
+                                </li>
+                                <li class="jcarousel__viewport__list__item">
+                                    <div style="width: 177px; height: 177px; background: linear-gradient(to right, red, blue);"></div>
+                                </li>
+                                <li class="jcarousel__viewport__list__item">
+                                    <div style="width: 177px; height: 177px; background: linear-gradient(to right, red, blue);"></div>
+                                </li>
+                                <li class="jcarousel__viewport__list__item">
+                                    <div style="width: 177px; height: 177px; background: linear-gradient(to right, red, blue);"></div>
+                                </li>
+                                <li class="jcarousel__viewport__list__item">
+                                    <div style="width: 177px; height: 177px; background: linear-gradient(to right, red, blue);"></div>
+                                </li>
+                                <li class="jcarousel__viewport__list__item">
+                                    <div style="width: 177px; height: 177px; background: linear-gradient(to right, red, blue);"></div>
+                                </li>
+                                <li class="jcarousel__viewport__list__item">
+                                    <div style="width: 177px; height: 177px; background: linear-gradient(to right, red, blue);"></div>
+                                </li>
+                                <li class="jcarousel__viewport__list__item">
+                                    <div style="width: 177px; height: 177px; background: linear-gradient(to right, red, blue);"></div>
+                                </li>
+                                <li class="jcarousel__viewport__list__item">
+                                    <div style="width: 177px; height: 177px; background: linear-gradient(to right, red, blue);"></div>
+                                </li>
+                                <li class="jcarousel__viewport__list__item">
+                                    <div style="width: 177px; height: 177px; background: linear-gradient(to right, red, blue);"></div>
+                                </li>
+                                <li class="jcarousel__viewport__list__item">
+                                    <div style="width: 177px; height: 177px; background: linear-gradient(to right, red, blue);"></div>
+                                </li>
+                                <li class="jcarousel__viewport__list__item">
+                                    <div style="width: 177px; height: 177px; background: linear-gradient(to right, red, blue);"></div>
+                                </li>
+                                <li class="jcarousel__viewport__list__item">
+                                    <div style="width: 177px; height: 177px; background: linear-gradient(to right, red, blue);"></div>
+                                </li>
+                                <li class="jcarousel__viewport__list__item">
+                                    <div style="width: 177px; height: 177px; background: linear-gradient(to right, red, blue);"></div>
+                                </li>
+                                <li class="jcarousel__viewport__list__item">
+                                    <div style="width: 177px; height: 177px; background: linear-gradient(to right, red, blue);"></div>
+                                </li>
+                                <li class="jcarousel__viewport__list__item">
+                                    <div style="width: 177px; height: 177px; background: linear-gradient(to right, red, blue);"></div>
+                                </li>
+                                <li class="jcarousel__viewport__list__item">
+                                    <div style="width: 177px; height: 177px; background: linear-gradient(to right, red, blue);"></div>
+                                </li>
+                                <li class="jcarousel__viewport__list__item">
+                                    <div style="width: 177px; height: 177px; background: linear-gradient(to right, red, blue);"></div>
+                                </li>
+                                <li class="jcarousel__viewport__list__item">
+                                    <div style="width: 177px; height: 177px; background: linear-gradient(to right, red, blue);"></div>
+                                </li>
+                                <li class="jcarousel__viewport__list__item">
+                                    <div style="width: 177px; height: 177px; background: linear-gradient(to right, red, blue);"></div>
+                                </li>
+                                <li class="jcarousel__viewport__list__item">
+                                    <div style="width: 177px; height: 177px; background: linear-gradient(to right, red, blue);"></div>
+                                </li>
+                                <li class="jcarousel__viewport__list__item">
+                                    <div style="width: 177px; height: 177px; background: linear-gradient(to right, red, blue);"></div>
+                                </li>
+                                <li class="jcarousel__viewport__list__item">
+                                    <div style="width: 177px; height: 177px; background: linear-gradient(to right, red, blue);"></div>
+                                </li>
+                            </ul>
+                        </div>
+
+                        <div class="jcarousel__pagination"></div>
+
+                        <a class="jcarousel__control jcarousel__control_prev" href="#">
+                            <i class="jcarousel__control__icon">←</i>
+                        </a>
+                        <a class="jcarousel__control jcarousel__control_next" href="#">
+                            <i class="jcarousel__control__icon">→</i>
+                        </a>
+
+                    </div>
+
+            </div>
+
+
 
             <div class="page__footer">
                 <div class="region">
@@ -249,12 +350,9 @@
 
 
         <script src="js/jquery-2.1.1.min.js"></script>
+        <script src="js/jcarousel-0.3.1.js"></script>
         <script src="js/jquery.placeholder.js"></script>
-        <script>
-            $(function() {
-                $('input, textarea').placeholder();
-            });
-        </script>
+        <script src="js/app.js"></script>
 
 
     </body>
