Refreshed head meta and ancients section

--- a/index.html
+++ b/index.html
@@ -3,23 +3,33 @@
     <head>
 
         <meta charset="utf-8">
-
-        <meta name="viewport" content="width=device-width">
-        <!-- Uncomment in case of responsive design and delete tag above
+        <meta http-equiv="x-ua-compatible" content="ie=edge">
+        <title>Index</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <!-- In case of responsive design
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
         -->
-        <meta name="SKYPE_TOOLBAR" content="SKYPE_TOOLBAR_PARSER_COMPATIBLE">
+
+        <link rel="apple-touch-icon" href="apple-touch-icon.png">
+
         <link rel="stylesheet" href="css/style.css">
-        <title>Index</title>
 
     </head>
 
     <body>
+
         <!--[if IE]>
             <div class="ancients">
                 Вы используете устаревший браузер.
                 Для корректного функционирования этого сайта и большинства других
                 Вам необходимо <a href="http://browsehappy.com/?locale=ru_RU">обновить ваш браузер</a>.
+            </div>
+        <![endif]-->
+
+        <!--[if IE]>
+            <div class="ancients">
+                You are using an <strong>outdated</strong> browser.
+                Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.
             </div>
         <![endif]-->
 
