Refreshed css globals

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <body>
 
         <!--[if IE]>
-            <div class="ancients">
+            <div class="browserupgrade">
                 Вы используете устаревший браузер.
                 Для корректного функционирования этого сайта и большинства других
                 Вам необходимо <a href="http://browsehappy.com/?locale=ru_RU">обновить ваш браузер</a>.
@@ -27,7 +27,7 @@
         <![endif]-->
 
         <!--[if IE]>
-            <div class="ancients">
+            <div class="browserupgrade">
                 You are using an <strong>outdated</strong> browser.
                 Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.
             </div>
