--- a/resources/markups/_button.html
+++ b/resources/markups/_button.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>Index</title>
+        <title>.button</title>
         <link rel="stylesheet" href="../styles/style.css">
     </head>
 
@@ -25,6 +25,14 @@
             <br>
             <br>
             <br>
+            <h2>_size_</h2>
+
+            <button class="button button_size_larger">.button.button_size_larger</button>
+
+            <br>
+            <br>
+            <br>
+            <br>
             <br>
             <br>
             <br>
@@ -38,7 +46,7 @@
 
 
         <script src="../vendors/jquery/jquery-2.2.3.min.js"></script>
-        <script src="../scripts/temp.js"></script>
+        <script src="../scripts/app.js"></script>
 
 
     </body>
