--- a/public/markups/_button.html
+++ b/public/markups/_button.html
@@ -1,16 +1,10 @@
 <!DOCTYPE html>
 <html lang="ru">
     <head>
-
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>Index</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <!-- In case of responsive design
-        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-        -->
+        <title>.button</title>
         <link rel="stylesheet" href="../styles/style.css">
-
     </head>
 
     <body>
@@ -27,13 +21,32 @@
 
             <button class="button">.button</button>
 
+            <br>
+            <br>
+            <br>
+            <br>
+            <h2>_size_</h2>
+
+            <button class="button button_size_larger">.button.button_size_larger</button>
+
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
         </div>
 
 
 
 
         <script src="../vendors/jquery/jquery-2.2.3.min.js"></script>
-        <script src="../scripts/temp.js"></script>
+        <script src="../scripts/app.js"></script>
 
 
     </body>
