Support for symbol/use sprites was added

--- a/development/markups/_input.html
+++ b/development/markups/_input.html
@@ -57,6 +57,7 @@
 
 
         <script src="../vendors/jquery/jquery-2.2.3.min.js"></script>
+        <script src="../vendors/svg4everybody/dist/svg4everybody.min.js"></script>
         <script src="../scripts/app.js"></script>
 
 
