--- a/development/markups/_input.html
+++ b/development/markups/_input.html
@@ -58,6 +58,7 @@
 
         <script src="../vendors/jquery/jquery-3.1.0.min.js"></script>
         <script src="../vendors/svg4everybody/dist/svg4everybody.min.js"></script>
+        <script src="../vendors/magnific-popup/dist/jquery.magnific-popup.min.js"></script>
         <script src="../scripts/app.js"></script>
 
 
