Scripts include was cleaned up

--- a/development/markups/_button.html
+++ b/development/markups/_button.html
@@ -45,10 +45,22 @@
 
 
 
+        <!-- jQuery -->
         <script src="../vendors/jquery/jquery-3.1.0.min.js"></script>
+
+        <!-- SVG for everybody-->
         <script src="../vendors/svg4everybody/dist/svg4everybody.min.js"></script>
+
+        <!-- Magnific popup-->
         <script src="../vendors/magnific-popup/dist/jquery.magnific-popup.min.js"></script>
-        <script src="../scripts/app.js"></script>
+
+        <!-- jQuery countdown -->
+        <script src="../vendors/jquery.countdown/jquery.plugin.min.js"></script>
+        <script src="../vendors/jquery.countdown/jquery.countdown.min.js"></script>
+        <script src="../vendors/jquery.countdown/jquery.countdown-ru.js"></script>
+
+        <!-- Temp -->
+        <script src="../scripts/temp.js"></script>
 
 
     </body>
