--- a/development/markups/_input.html
+++ b/development/markups/_input.html
@@ -27,7 +27,7 @@
 
             <div class="input">
                 <label class="input__label" for="temp-a">Label</label>
-                <input class="input__control" type="text" placeholder="Input field" id="temp-a">
+                <input class="input__widget" type="text" placeholder="Input field" id="temp-a">
             </div>
 
             <br>
@@ -36,9 +36,9 @@
             <br>
             <h2>_widget_</h2>
 
-            <div class="input input_widget_area">
+            <div class="input input_type_area">
                 <label class="input__label" for="temp-b">Label</label>
-                <textarea class="input__control" placeholder="Textarea field" id="temp-b"></textarea>
+                <textarea class="input__widget" placeholder="Textarea field" id="temp-b"></textarea>
             </div>
 
             <br>
