--- a/development/markups/_title.html
+++ b/development/markups/_title.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <title>.title</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <!--<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700&subset=cyrillic" rel="stylesheet">-->
         <link rel="stylesheet" href="../styles/style.css">
     </head>
